[gd_scene load_steps=16 format=3 uid="uid://28cgr1b5gr3d"]

[ext_resource type="Theme" uid="uid://bpg62mkgrlu4" path="res://Themes/MainTheme.tres" id="1_7inlb"]
[ext_resource type="Script" uid="uid://ctaonvdu3mv2v" path="res://Scenes/main.gd" id="1_ltsr1"]
[ext_resource type="PackedScene" uid="uid://wv7webjyd443" path="res://Scenes/Components/BaseBarBtn.tscn" id="1_op4ys"]
[ext_resource type="Texture2D" uid="uid://dkvkic830pjlg" path="res://Assets/Home.svg" id="3_32c14"]
[ext_resource type="Texture2D" uid="uid://c57g273sfkrsv" path="res://Assets/Cards.svg" id="4_dt2t0"]
[ext_resource type="PackedScene" uid="uid://btr3inifrxa8h" path="res://Scenes/Home.tscn" id="5_oe7lw"]
[ext_resource type="Texture2D" uid="uid://crtrny11c6j0s" path="res://Assets/List.svg" id="5_xp04p"]
[ext_resource type="Texture2D" uid="uid://dvf7ipmmmv8k0" path="res://Assets/Group.svg" id="6_yrngx"]
[ext_resource type="Texture2D" uid="uid://bcisnhvl0qque" path="res://Assets/Plus.svg" id="7_75f6f"]
[ext_resource type="PackedScene" uid="uid://cp1v15lakxckh" path="res://Scenes/Play.tscn" id="7_wubof"]
[ext_resource type="PackedScene" uid="uid://b0ei7dbjr4xef" path="res://Scenes/ListWords.tscn" id="8_l2aia"]
[ext_resource type="PackedScene" uid="uid://bjj87jfo810oo" path="res://Scenes/AddWords.tscn" id="9_vf5rx"]
[ext_resource type="PackedScene" uid="uid://pvwrb0013kvv" path="res://Scenes/ListDecks.tscn" id="10_544yn"]
[ext_resource type="Script" uid="uid://y85b4qoj66bl" path="res://Scenes/Scripts/about_btn.gd" id="13_4lcr3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mslt7"]
bg_color = Color(0.964706, 0.968627, 0.984314, 1)
shadow_color = Color(0, 0, 0, 0.25098)
shadow_size = 1

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7inlb")
script = ExtResource("1_ltsr1")

[node name="BackGround" type="CanvasLayer" parent="."]
layer = -100

[node name="ColorRect" type="ColorRect" parent="BackGround"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="RenderedScene" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2

[node name="BottomNavBar" type="CanvasLayer" parent="."]
layer = 10

[node name="Panel" type="Panel" parent="BottomNavBar"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -128.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mslt7")

[node name="NavBarContainer" type="VBoxContainer" parent="BottomNavBar"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -128.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
alignment = 1

[node name="NavBar" type="HBoxContainer" parent="BottomNavBar/NavBarContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme = ExtResource("1_7inlb")
alignment = 1

[node name="Home" parent="BottomNavBar/NavBarContainer/NavBar" instance=ExtResource("1_op4ys")]
layout_mode = 2
icon_file = ExtResource("3_32c14")
page = ExtResource("5_oe7lw")

[node name="Play" parent="BottomNavBar/NavBarContainer/NavBar" instance=ExtResource("1_op4ys")]
layout_mode = 2
icon_file = ExtResource("4_dt2t0")
page = ExtResource("7_wubof")

[node name="List" parent="BottomNavBar/NavBarContainer/NavBar" instance=ExtResource("1_op4ys")]
layout_mode = 2
icon_file = ExtResource("5_xp04p")
page = ExtResource("8_l2aia")

[node name="Decks" parent="BottomNavBar/NavBarContainer/NavBar" instance=ExtResource("1_op4ys")]
layout_mode = 2
icon_file = ExtResource("6_yrngx")
page = ExtResource("10_544yn")

[node name="Add" parent="BottomNavBar/NavBarContainer/NavBar" instance=ExtResource("1_op4ys")]
layout_mode = 2
icon_file = ExtResource("7_75f6f")
page = ExtResource("9_vf5rx")

[node name="AboutBtn" type="Node" parent="."]
script = ExtResource("13_4lcr3")

[node name="GuideBtn" type="Node" parent="."]
